# src/controllers/users/login.js
@@ -8,19 +8,19 @@ const { httpError } = require("../../helpers");
 const { SECRET_KEY } = process.env;
 
 const login = async (req, res) => {
-  const { _id, name, email, avatarURL, birthday, phone, location } = req.user;
+  const { email: loginEmail, password: loginPassword } = req.body;
+  const { _id, name, email, avatarURL, birthday, phone, location, password } =
+    await User.findOne({ loginEmail });
+  if (!name) throw httpError(401, "Email or password is wrong");
 
-  const { userEmail, password } = req.body;
-  const user = await User.findOne({ userEmail });
-  if (!user) throw httpError(401, "Email or password is wrong");
-
-  const passCompare = await bcrypt.compare(password, user.password);
+  const passCompare = await bcrypt.compare(loginPassword, password);
   if (!passCompare) throw httpError(401, "Email or password is wrong");
   const payload = {
-    id: user._id,
+    id: _id,
   };
   const token = jwt.sign(payload, SECRET_KEY, { expiresIn: "12h" });
-  await User.findOneAndUpdate(user._id, { token });
+  await User.findOneAndUpdate(_id, { token });
+
   res.json({
     token,
     user: { _id, name, email, avatarURL, birthday, phone, location },
